nova_tests/plan118/neg/plan118_6_neg_addr_of_removed.nv
// Plan 118.6 — addr_of(x) is removed → E_ADDR_OF_REMOVED.
// EXPECT_COMPILE_ERROR E_ADDR_OF_REMOVED

module neg.plan118_6_neg_addr_of_removed

fn bad() {
    ro x = 1
    addr_of(x)  // E_ADDR_OF_REMOVED
}
